Adjusted sizes and gaps on flex items, changed buttons to material icon buttons and fixed spacing, adjusted logo size and nav drawer spacing.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,10 +41,9 @@ object-position: center;
 }
 
 #home-card {
-  height: 30rem;
-  width: 30rem;
-  margin: 10% auto;
-  padding: 17px;
+  height: 43rem;
+  width: 43rem;
+  margin: 5% auto;
   background: rgba( 22, 22, 22, 0.65 );
   box-shadow: 0 8px 100px 0 rgba(255, 253, 253, 0.49);
   backdrop-filter: blur( 7px );
@@ -77,13 +76,13 @@ object-position: center;
 }
 
 .card-container {
-  position: relative;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
-  flex-wrap: wrap;
+  flex-flow: wrap;
   text-align: center;
   cursor: pointer;
+  gap: 20px;
 }
 
 .promotion-card-name {
@@ -139,10 +138,11 @@ object-position: center;
 
 .performer-card-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
   text-align: center;
+  gap: 3px;
 }
 
 .performer-card {
@@ -181,7 +181,7 @@ object-position: center;
   margin: 10px;
   height: 25rem;
   color: white;
-  background: rgba(33, 33, 33, 0.65);
+  background: rgba(104, 101, 101, 0.65);
   box-shadow: 0 8px 32px 0 rgba(152, 152, 152, 0.467);
   backdrop-filter: blur( 7px );
   -webkit-backdrop-filter: blur( 7px );
